# simple-logger

./: .travis.yml  CMakeLists.txt  README.md
examples/: logger.cxx
include/: simple_logger.hpp
tests/: CMakeLists.txt  logger_tests.cxx
